EmissionFactorMatching/objects/HotelStayEmssnFctr.object
<CustomObject>
    <fields>
        <fullName>EmissionsFactorUpdateYear__c</fullName>
        <label>Emissions Factor Update Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MasterEmissionsSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MasterEmissionsSet</label>
        <referenceTo>HotelStayEmssnFctr</referenceTo>
        <relationshipLabel>Hotel Stay Emissions Factors</relationshipLabel>
        <relationshipName>Hotel_Stay_Emissions_Factors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recalculate_Emissions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Emissions</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>